--- a/config.BiGRU_Dense.json
+++ b/config.BiGRU_Dense.json
@@ -1,13 +1,13 @@
 {
-    "models": ["BiGRU_attention"],
-    "BiGRU_attention": {
-            "folding": false,
+    "models": ["BiGRU_Dense"],
+    "BiGRU_Dense": {
+            "folding": true,
             "num_folds": 10,
             "num_epochs": 10,
             "sequence_length": 500,
             "gru_dim": 64,
             "recurrent_units": 64,
-            "dense_dim": 32,
+            "dense_dims": [128, 64],
             "batch_size": 256
     }
 }
