--- a/config.BiGRU_attention.json
+++ b/config.BiGRU_attention.json
@@ -3,6 +3,7 @@
     "BiGRU_attention"
   ],
   "BiGRU_attention": {
+    "optimizer": "nadam",
     "folding": true,
     "num_folds": 10,
     "num_epochs": 10,
