added custom attention layers to layers.py and updated BiGRU_Max_Avg_Pool_concat.json model

--- a/config.BiGRU_Max_Avg_Pool_concat.json
+++ b/config.BiGRU_Max_Avg_Pool_concat.json
@@ -6,7 +6,7 @@
             "num_epochs": 10,
             "sequence_length": 500,
             "recurrent_units": 128,
-            "dense_dim": 64,
+            "dense_dims": 96,
             "dropout":0.5,
             "batch_size": 256
     }
