--- a/config.simpleCNN.json
+++ b/config.simpleCNN.json
@@ -5,8 +5,8 @@
             "num_folds": 10,
             "num_epochs": 10,
             "sequence_length": 500,
-            "dropout_rate": 0.3,
-            "filter_sizes": [3, 4, 5],
+            "dropout_rate": 0.5,
+            "filter_sizes": [2, 3, 4, 5, 6],
             "num_of_filters": 256,
             "batch_size": 128,
             "optimizer": "adam"
