updates to pyramid, added correlation computation, blending, etc

--- a/config.BiGRU_attention.json
+++ b/config.BiGRU_attention.json
@@ -10,6 +10,7 @@
     "sequence_length": 500,
     "recurrent_units": 128,
     "dense_dim": 64,
-    "batch_size": 256
+    "batch_size": 256,
+    "norm_folds": true
   }
 }
