--- a/config.2BiGRU_rec_dropout_glob_max_pool.json
+++ b/config.2BiGRU_rec_dropout_glob_max_pool.json
@@ -11,6 +11,7 @@
     "recurrent_units": 128,
     "dense_dim": 64,
     "dropout":0.5,
-    "batch_size": 256
+    "batch_size": 256,
+    "norm_folds": true
   }
 }
