--- a/config.pyramidCNN.json
+++ b/config.pyramidCNN.json
@@ -1,16 +1,19 @@
 {
     "models": ["pyramidCNN"],
     "pyramidCNN": {
-            "folding": true,
+            "folding": false,
             "num_folds": 10,
             "num_epochs": 10,
             "sequence_length": 500,
-            "dropout_rate": 0.3,
-            "dense_size": 128,
+            "embedding_dropout": 0.5,
+            "dense_dropout": 0.5,
+            "conv_dropout": 0.0,
+            "use_bn": false,
             "filter_size": 3,
             "num_of_filters": 256,
             "num_of_blocks": 3,
             "batch_size": 128,
-            "optimizer": "adam"
+            "optimizer": "adam",
+            "norm_folds": true
     }
 }
