Added several variations of recurrent models based on LSTM and SRU

--- a/config/config.2BiGRU_spat_dropout.json
+++ b/config/config.2BiGRU_spat_dropout.json
@@ -1,8 +1,8 @@
 {
   "models": [
-    "BiGRU_attention"
+    "2BiGRU_spat_dropout"
   ],
-  "BiGRU_attention": {
+  "2BiGRU_spat_dropout": {
     "optimizer": "nadam",
     "folding": true,
     "num_folds": 10,
@@ -10,6 +10,8 @@
     "sequence_length": 500,
     "recurrent_units": 128,
     "dense_dim": 64,
+    "dropout":0.5,
+    "spatial_dropout" : 0.5,
     "batch_size": 256,
     "norm_folds": true
   }
