Capsules and lgboost

--- a/config/config.pyramidCNN.json
+++ b/config/config.pyramidCNN.json
@@ -5,10 +5,10 @@
             "num_folds": 10,
             "num_epochs": 10,
             "sequence_length": 500,
-            "embedding_dropout": 0.5,
-            "dense_dropout": 0.5,
+            "embedding_dropout": 0.3,
+            "dense_dropout": 0.3,
             "conv_dropout": 0.0,
-            "use_bn": false,
+            "use_bn": true,
             "filter_size": 3,
             "num_of_filters": 256,
             "num_of_blocks": 3,
